fix submenu on mobile device

--- a/src/scss/blocks/_menu.scss
+++ b/src/scss/blocks/_menu.scss
@@ -56,6 +56,7 @@
   transition: visibility .2s ease-in, opacity .2s ease-in-out;
   left: 0;
   @include mobile {
+    display: none;
     //position: static;
     //top: auto;
     //left: auto;
